# project-management

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  dag_exporter.py  effort_estimator.py  engineer_optimization.py  epic_timeline_estimator.py  example.sh  issue_parser.py  jira_client.py  jira_csv_updater.py  jira_epic_maker.py  pyproject.toml  requirements.txt  scheduler.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-18-multi-epic-timeline-estimator.md
examples/: QUICK_REFERENCE.md  README.md  sample-optimization.json  sample-project.csv  sample-timeline.mmd  simple-optimization.json  simple-project.csv  simple-timeline.mmd
tests/: __init__.py  conftest.py  test_epic_timeline_estimator.py  test_issue_parser.py  test_scheduler.py
